<resources>
    <string name="app_name">API Based News App</string>
    <string name="news_feed">News Feed</string>
    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="contentdescriptionofpager">pager</string>
    <string name="detailednews">Detailed News</string>
    <string name="dummyheadline">Linux Operating System Users Are Born Developers Because They Know Value of Terminal and Command Line</string>
    <string name="dummytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porttitor enim ut lorem semper tempor. Nulla vitae aliquet mi. Donec at urna vel sapien rutrum posuere. Praesent et tortor sed lacus venenatis ultrices. Phasellus a elementum lectus.</string>
    <string name="dummyauthor">MSTC DA-IICT</string>
    <string name="dummytime">Published At 21-01-2022 12:30</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>