<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="265dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_margin="2dp"
        app:cardCornerRadius="12dp"
        android:elevation="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:padding="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/dummyheadline"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/newscontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="7"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/dummytext"/>
                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentdescriptionofpager"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="14sp"
                android:padding="5dp"
                android:textColor="@color/purple_500"
                android:text="@string/dummyauthor"/>

            <TextView
                android:id="@+id/publisiontime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:textColor="@color/black"
                android:text="@string/dummytime"
                android:textStyle="bold"
                android:textSize="12sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</RelativeLayout>